--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 
-    <body>
-        <nav>
-            
+    <body data-spy="scroll" data-target="#nav-menu">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-menu" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Kevin Nguyen</a>
+                </div>
+
+                <div class="collapse navbar-collapse navbar-right" id="nav-menu">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contact-me">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
         <header class="hero">
@@ -139,5 +157,8 @@
                 </div>
             </div>
         </section>
+        
+        <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </body>
 </html>
