--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 
-    <body data-spy="scroll" data-target="#nav-menu">
-        <nav class="navbar navbar-default navbar-fixed-top">
+    <body data-spy="scroll" data-target="#nav-menu" data-offset="51">
+        <nav data-spy="affix" data-offset-top="100" class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-menu" aria-expanded="false">
@@ -143,7 +143,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="message">Message</label>
-                                        <textarea class="form-control" name="message" id="message" placeholder="YOUR MESSAGE" rows="8"></textarea>
+                                        <textarea class="form-control" name="message" id="message" placeholder="Your Message" rows="8"></textarea>
                                     </div>
                                 </div>
                             </div>
