Collapse navbar menu on selection for small screens

--- a/index.html
+++ b/index.html
@@ -86,22 +86,24 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col.xs-12 col-sm-6 col-lg-4 remove-gutter">
+                    <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
                         <a href="#"><img src="resource/portfolio/1.jpg" alt="Portfolio example 1" class="img-responsive"></a>
+
+                        
                     </div>
-                    <div class="col.xs-12 col-sm-6 col-lg-4 remove-gutter">
+                    <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
                         <a href="#"><img src="resource/portfolio/2.jpg" alt="Portfolio example 2" class="img-responsive"></a>
                     </div>
-                    <div class="col.xs-12 col-sm-6 col-lg-4 remove-gutter">
+                    <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
                         <a href="#"><img src="resource/portfolio/3.jpg" alt="Portfolio example 3" class="img-responsive"></a>
                     </div>
-                    <div class="col.xs-12 col-sm-6 col-lg-4 remove-gutter">
+                    <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
                         <a href="#"><img src="resource/portfolio/4.jpg" alt="Portfolio example 4" class="img-responsive"></a>
                     </div>
-                    <div class="col.xs-12 col-sm-6 col-lg-4 remove-gutter">
+                    <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
                         <a href="#"><img src="resource/portfolio/5.jpg" alt="Portfolio example 5" class="img-responsive"></a>
                     </div>
-                    <div class="col.xs-12 col-sm-6 col-lg-4 remove-gutter">
+                    <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
                         <a href="#"><img src="resource/portfolio/6.jpg" alt="Portfolio example 6" class="img-responsive"></a>
                     </div>
                 </div>
@@ -160,5 +162,6 @@
         
         <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/logic.js"></script>
     </body>
 </html>
