--- a/index.html
+++ b/index.html
@@ -87,24 +87,65 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
-                        <a href="#"><img src="resource/portfolio/1.jpg" alt="Portfolio example 1" class="img-responsive"></a>
-
+                        <a href="#">
+                            <img src="resource/portfolio/1.jpg" alt="Portfolio example 1" class="img-responsive">
+                            <div class="portfolio-overlay">
+                                <div class="overlay-content-container">
+                                    <span class="center-text-vertical"><h3>Project 1</h3></span>
+                                </div>
+                            </div>
+                        </a>
                         
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
-                        <a href="#"><img src="resource/portfolio/2.jpg" alt="Portfolio example 2" class="img-responsive"></a>
+                        <a href="#">
+                            <img src="resource/portfolio/2.jpg" alt="Portfolio example 2" class="img-responsive">
+                            <div class="portfolio-overlay">
+                                <div class="overlay-content-container">
+                                    <span class="center-text-vertical"><h3>Project 2</h3></span>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
-                        <a href="#"><img src="resource/portfolio/3.jpg" alt="Portfolio example 3" class="img-responsive"></a>
+                        <a href="#">
+                            <img src="resource/portfolio/3.jpg" alt="Portfolio example 3" class="img-responsive">
+                            <div class="portfolio-overlay">
+                                <div class="overlay-content-container">
+                                    <span class="center-text-vertical"><h3>Project 3</h3></span>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
-                        <a href="#"><img src="resource/portfolio/4.jpg" alt="Portfolio example 4" class="img-responsive"></a>
+                        <a href="#">
+                            <img src="resource/portfolio/4.jpg" alt="Portfolio example 4" class="img-responsive">
+                            <div class="portfolio-overlay">
+                                <div class="overlay-content-container">
+                                    <span class="center-text-vertical"><h3>Project 4</h3></span>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
-                        <a href="#"><img src="resource/portfolio/5.jpg" alt="Portfolio example 5" class="img-responsive"></a>
+                        <a href="#">
+                            <img src="resource/portfolio/5.jpg" alt="Portfolio example 5" class="img-responsive">
+                            <div class="portfolio-overlay">
+                                <div class="overlay-content-container">
+                                    <span class="center-text-vertical"><h3>Project 5</h3></span>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-4 remove-gutter">
-                        <a href="#"><img src="resource/portfolio/6.jpg" alt="Portfolio example 6" class="img-responsive"></a>
+                        <a href="#">
+                            <img src="resource/portfolio/6.jpg" alt="Portfolio example 6" class="img-responsive">
+                            <div class="portfolio-overlay">
+                                <div class="overlay-content-container">
+                                    <span class="center-text-vertical"><h3>Project 6</h3></span>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
